--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta name="keywords" content=""> 
   <meta name="description" content=""> 
   <meta http-equiv="content-type" content="text/html; charset=utf-8"> 
-  <title>BlackPolish by TEMPLATED</title> 
+  <title>Lol ur mom</title> 
   <link href="http://fonts.googleapis.com/css?family=Oswald:400,300" rel="stylesheet" type="text/css"> 
   <link href="http://fonts.googleapis.com/css?family=Abel|Satisfy" rel="stylesheet" type="text/css"> 
   <link href="style.css" rel="stylesheet" type="text/css" media="screen"> 
@@ -28,7 +28,7 @@
     <div id="banner"> 
      <div class="content"> 
       <div>
-       <img src="images/img02.jpg" width="1000" height="400" alt="">
+       <img src="images/img02.jpg" width="1000" height="400" alt="https://www.youtube.com/watch?v=beQMZ9-Ovs4">
       </div> 
      </div> 
     </div> 
